# ai-calendar

./: .env.example  .env.webhook  .gitignore  API_DOCUMENTATION.md  CI_CD_SETUP.md  DEPLOYMENT.md  Makefile  README.md  deploy.sh  docker-compose.yml  nginx-webhook-config.txt  webhook_server.py
.github/workflows/: deploy.yml
backend/: .gitignore  Dockerfile  REDIS_CELERY_SETUP.md  pyproject.toml
backend/app/: .env.example  celery_app.py  celery_worker.py  dependencies.py  exception.py  main.py  settings.py
backend/app/api/: __init__.py  ai_calendar.py  auth.py  google_auth.py  google_calendar.py  webhook.py
backend/app/cache/: __init__.py  accessor.py
backend/app/database/: __init__.py  accessor.py
backend/app/repository/: __init__.py  authrepo.py  calendar_repo.py  goals_repo.py  googlerepo.py
backend/app/schemas/: event_schemas.py  openai_schemas.py
backend/app/service/: __init__.py  authservice.py  calendar_cache_service.py  calendar_service.py  googleoauth.py  openai_service.py  webhook_maintenance.py
backend/app/tasks/: __init__.py  openai_tasks.py  webhook_tasks.py
frontend/: .env.example  .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: CalendarCallback.tsx  Goals.css  Goals.tsx  GoalsSimple.tsx  GoalsWarningModal.css  GoalsWarningModal.tsx  GoogleCallback.css  GoogleCallback.tsx  Login.css  Login.tsx  LogoutModal.css  LogoutModal.tsx  Profile.css  Profile.tsx  ProtectedRoute.tsx  Recommendations.css  Recommendations.tsx  RecurrenceBadge.css  RecurrenceBadge.tsx
(+9 files in other folders)
